# Tp_mpi

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main_asinc.c  myhosts
